--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jun 2 15:32:47 BRT 2004 Scott James Remnant <scott@netsplit.com>
+
+  * version-nr, debian/changelog: Bump version to 1.10.23.
+
 Tue Jun 1 17:42:58 BRT 2004 Scott James Remnant <scott@netsplit.com>
 
   * scripts/Makefile.in: Move dpkg-scanpackages and dpkg-scansources
