--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jun 3 12:03:49 BRT 2004 Scott James Remnant <scott@netsplit.com>
+
+  * archtable, scripts/dpkg-architecture.pl: Remove support for amd64/x86-64,
+  the porters clearly can't make up their mind what they want.
+
 Wed Jun 2 15:32:47 BRT 2004 Scott James Remnant <scott@netsplit.com>
 
   * version-nr, debian/changelog: Bump version to 1.10.23.
