--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 dpkg (1.10.23) unstable; urgency=low
 
-  * 
+  * Removed support for x86-64 (x86_64 / amd64).  Closes: #252346.
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
 
