--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jun 7 17:47:13 CEST 2004 Jordi Mallach <jordi@debian.org>
+
+  * po/ca.po: Update Catalan translation.
+
 Thu Jun 3 12:03:49 BRT 2004 Scott James Remnant <scott@netsplit.com>
 
   * archtable, scripts/dpkg-architecture.pl: Remove support for amd64/x86-64,
