--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jun 14 08:58:27 BST 2004 Lele Gaifax <lele@nautilus.homeip.net>
+
+  * po/it.po: Updated.
+
 Mon Jun 7 17:47:13 CEST 2004 Jordi Mallach <jordi@debian.org>
 
   * po/ca.po: Update Catalan translation.
