--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 dpkg (1.10.23) unstable; urgency=low
 
   * Removed support for x86-64 (x86_64 / amd64).  Closes: #252346.
-  * Updated translations:
+  * Updated Translations:
     - Catalan (Jordi Mallach).
+    - Italian (Lele Gaifax).
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
 
