--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jun 14 09:12:08 BST 2004 Scott James Remnant <scott@netsplit.com>
+
+  * scripts/dpkg-divert.8: Correct typo (ibrary -> library).
+
 Mon Jun 14 08:58:27 BST 2004 Lele Gaifax <lele@nautilus.homeip.net>
 
   * po/it.po: Updated.
