--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 dpkg (1.10.23) unstable; urgency=low
 
   * Removed support for x86-64 (x86_64 / amd64).  Closes: #252346.
+  * Documentation:
+    - Correct typo in dpkg-divert(8).  Closes: #254175.
   * Updated Translations:
     - Catalan (Jordi Mallach).
     - Italian (Lele Gaifax).
